@@ -11,11 +11,14 @@ import com.google.common.collect.Lists;
 import com.lothrazar.storagenetwork.StorageNetworkMod;
 import com.lothrazar.storagenetwork.api.EnumSearchPrefix;
 import com.lothrazar.storagenetwork.api.IGuiNetwork;
-import com.lothrazar.storagenetwork.block.request.ScreenNetworkTable;
-import com.lothrazar.storagenetwork.gui.ButtonRequest.TextureEnum;
+import com.lothrazar.storagenetwork.gui.components.ButtonRequest;
+import com.lothrazar.storagenetwork.gui.components.ButtonRequest.TextureEnum;
+import com.lothrazar.storagenetwork.gui.slot.ItemSlotNetwork;
+import com.lothrazar.storagenetwork.network.ClearRecipeMessage;
 import com.lothrazar.storagenetwork.network.InsertMessage;
 import com.lothrazar.storagenetwork.network.RequestMessage;
 import com.lothrazar.storagenetwork.registry.PacketRegistry;
+import com.lothrazar.storagenetwork.util.SsnConsts;
 import com.lothrazar.storagenetwork.util.UtilTileEntity;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.Font;
@@ -44,50 +47,141 @@ public class NetworkWidget {
   public ButtonRequest sortBtn;
   public ButtonRequest jeiBtn;
   public ButtonRequest focusBtn;
-  private int fieldHeight = 90;
+  public ButtonRequest clearGridBtn;
   private List<ItemSlotNetwork> slots;
   private final IGuiNetwork gui;
   private long lastClick;
+  //
   private int page = 1;
   private int maxPage = 1;
   private int lines = 4;
-  private final int columns = 9;
-
-  @Deprecated
-  public NetworkWidget(IGuiNetwork gui) {
-    this(gui, NetworkScreenSize.NORMAL);
-  }
+  private int columns = 9;
+  public int scrollHeight = 152;
+  public int scrollWidth = 176;//defaults to WIDTH
+  //
+  public int xNetwork = 8;
+  public int yNetwork = 10;
+  private final NetworkScreenSize size;
 
   public NetworkWidget(IGuiNetwork gui, NetworkScreenSize size) {
     this.gui = gui;
-    switch (size) {
-      case LARGE:
-        setLines(8);
-        setFieldHeight(180 - 8); // the jei -8 gets fixed here now
-      break;
-      case NORMAL:
-        setLines(4);
-        setFieldHeight(90);
-      break;
-    }
     stacks = Lists.newArrayList();
     slots = Lists.newArrayList();
+    this.size = size;
+    setScreenSize();
     PacketRegistry.INSTANCE.sendToServer(new RequestMessage());
     lastClick = System.currentTimeMillis();
+  }
+
+  private void setScreenSize() {
+    int buffer = 0;
+    setLines(size.lines());
+    setColumns(size.columns());
     switch (size) {
-      case LARGE:
-        setLines(8);
-        setFieldHeight(180 - 8); // offset is important 
-      break;
       case NORMAL:
-        setLines(4);
-        setFieldHeight(90);
+        buffer = 59;
       break;
+      case LARGE:
+      break;
+      case EXPANDED:
+        buffer = -10;
+        this.xNetwork = 10; // head.height();
+        this.scrollWidth = W + 12 * 18; //imageWidth
+      break;
+    }
+    scrollHeight = (SsnConsts.SQ + 1) * this.getLines() + buffer;
+  }
+
+  public void init(Font font) {
+    int x = gui.getGuiLeft() + 81;
+    int y = gui.getGuiTop();
+    switch (this.size) {
+      case NORMAL -> {
+        y += 96; //
+      }
+      case LARGE -> {
+        y += 160; //
+      }
+      case EXPANDED -> {
+        x += 80;
+        y += 256 + 140;
+      }
+    }
+    searchBar = new EditBox(font,
+        x, y,
+        85, font.lineHeight, null);
+    searchBar.setMaxLength(30);
+    searchBar.setBordered(false);
+    searchBar.setVisible(true);
+    searchBar.setTextColor(16777215);
+    //    searchBar.setFocus(StorageNetwork.CONFIG.enableAutoSearchFocus());
+    if (ModList.get().isLoaded("jei")) {
+      initJei();
+    }
+    x = gui.getGuiLeft() + 6;
+    y = this.searchBar.getY() - 4;
+    if (this.size == NetworkScreenSize.EXPANDED) {
+      x += 155;
+      y += 16;
+    }
+    directionBtn = new ButtonRequest(
+        x, y, "", (p) -> {
+          gui.setDownwards(!gui.getDownwards());
+          gui.syncDataToServer();
+        }, DEFAULT_NARRATION);
+    directionBtn.setHeight(16);
+    x += 16;
+    sortBtn = new ButtonRequest(x, y, "", (p) -> {
+      gui.setSort(gui.getSort().next());
+      gui.syncDataToServer();
+    }, DEFAULT_NARRATION);
+    sortBtn.setHeight(16);
+    x += 16;
+    if (ModList.get().isLoaded("jei")) {
+      jeiBtn = new ButtonRequest(x, y, "", (p) -> {
+        gui.setJeiSearchSynced(!gui.isJeiSearchSynced());
+        gui.syncDataToServer();
+      }, DEFAULT_NARRATION);
+      jeiBtn.setHeight(16);
+    }
+    x = searchBar.getX() + searchBar.getWidth() + 2;
+    y = searchBar.getY() - 2;
+    focusBtn = new ButtonRequest(
+        x, y, "", (p) -> {
+          gui.setAutoFocus(!gui.getAutoFocus());
+          gui.syncDataToServer();
+        }, DEFAULT_NARRATION);
+    focusBtn.setHeight(11);
+    focusBtn.setWidth(6);
+    if (this.getSize() != NetworkScreenSize.LARGE) {
+      x = searchBar.getX() - 19;
+      y = searchBar.getY() + 13;
+      if (this.getSize() == NetworkScreenSize.EXPANDED) {
+        //omg this is a bit of a mess i should refactor this
+        x = searchBar.getX() - 99;
+        y = searchBar.getY() - 2;
+      }
+      clearGridBtn = new ButtonRequest(
+          x, y, "", (p) -> {
+            PacketRegistry.INSTANCE.sendToServer(new ClearRecipeMessage());
+            PacketRegistry.INSTANCE.sendToServer(new RequestMessage(0, ItemStack.EMPTY, false, false));
+          }, DEFAULT_NARRATION);
+      clearGridBtn.setHeight(7);
+      clearGridBtn.setWidth(7);
+      this.clearGridBtn.setTextureId(TextureEnum.CRAFTCLEAR);
     }
   }
 
   public List<ItemStack> getStacks() {
     return stacks;
+  }
+
+  public void setStacks(List<ItemStack> stacks) {
+    this.stacks = stacks;
+  }
+
+  public NetworkScreenSize getSize() {
+    return size;
   }
 
   public void applySearchTextToSlots() {
@@ -131,7 +225,7 @@ public class NetworkWidget {
     }
     else if (searchText.startsWith(EnumSearchPrefix.TAG.getPrefix())) { // search tags
       List<String> joiner = new ArrayList<>();
-      for (ResourceLocation oreId : stack.getTags().map((tagKey) -> tagKey.location()).collect(Collectors.toList())) {
+      for (ResourceLocation oreId : stack.getTags().map((tagKey) -> tagKey.location()).toList()) {
         String oreName = oreId.toString();
         joiner.add(oreName);
       }
@@ -147,12 +241,16 @@ public class NetworkWidget {
     return System.currentTimeMillis() > lastClick + 100L;
   }
 
-  int getLines() {
+  public int getLines() {
     return lines;
   }
 
   int getColumns() {
     return columns;
+  }
+
+  void setColumns(int c) {
+    this.columns = c;
   }
 
   public void setLines(int v) {
@@ -197,10 +295,10 @@ public class NetworkWidget {
         }
         int in = index;
         slots.add(new ItemSlotNetwork(gui, stacksToDisplay.get(in),
-            gui.getGuiLeft() + 8 + col * 18,
-            gui.getGuiTopFixJei() + 10 + row * 18,
+            gui.getGuiLeft() + xNetwork + col * SsnConsts.SQ,
+            gui.getGuiTop() + yNetwork + row * SsnConsts.SQ,
             stacksToDisplay.get(in).getCount(),
-            gui.getGuiLeft(), gui.getGuiTopFixJei(), true));
+            gui.getGuiLeft(), gui.getGuiTop(), true));
         index++;
       }
     }
@@ -208,19 +306,9 @@ public class NetworkWidget {
 
   public boolean inSearchBar(double mouseX, double mouseY) {
     return gui.isInRegion(
-        searchBar.getX() - gui.getGuiLeft(), searchBar.getY() - gui.getGuiTopFixJei(), // x, y
+        searchBar.getX() - gui.getGuiLeft(), searchBar.getY() - gui.getGuiTop(), // x, y
         searchBar.getWidth(), searchBar.getHeight(), // width, height
         mouseX, mouseY);
-  }
-
-  public void initSearchbar() {
-    searchBar.setBordered(false);
-    searchBar.setVisible(true);
-    searchBar.setTextColor(16777215);
-    //    searchBar.setFocus(StorageNetwork.CONFIG.enableAutoSearchFocus());
-    if (ModList.get().isLoaded("jei")) {
-      initJei();
-    }
   }
 
   private void initJei() {
@@ -256,6 +344,9 @@ public class NetworkWidget {
     else if (sortBtn != null && sortBtn.isMouseOver(mouseX, mouseY)) {
       tooltip = Component.translatable("gui.storagenetwork.req.tooltip_" + gui.getSort().name().toLowerCase());
     }
+    else if (clearGridBtn != null && clearGridBtn.isMouseOver(mouseX, mouseY)) {
+      tooltip = Component.translatable("gui.storagenetwork.req.tooltip_cleargrid");
+    }
     else if (focusBtn != null && focusBtn.isMouseOver(mouseX, mouseY)) {
       tooltip = Component.translatable("gui.storagenetwork.autofocus.tooltip." + gui.getAutoFocus());
     }
@@ -273,15 +364,13 @@ public class NetworkWidget {
         lis.add(Component.translatable("gui.storagenetwork.fil.tooltip_tooltip")); //#
         lis.add(Component.translatable("gui.storagenetwork.fil.tooltip_tags")); //$
         lis.add(Component.translatable("gui.storagenetwork.fil.tooltip_clear")); //clear
-        //        Screen screen = ((Screen) gui);
-        ms.renderTooltip(font, lis, Optional.empty(), mouseX - gui.getGuiLeft(), mouseY - gui.getGuiTopFixJei());
+        ms.renderTooltip(font, lis, Optional.empty(), mouseX - gui.getGuiLeft(), mouseY - gui.getGuiTop());
         return; // all done, we have our tts rendered
       }
     }
     //do we have a tooltip
     if (tooltip != null) {
-      //      Screen screen = ((Screen) gui);
-      ms.renderTooltip(font, Lists.newArrayList(tooltip), Optional.empty(), mouseX - gui.getGuiLeft(), mouseY - gui.getGuiTopFixJei());
+      ms.renderTooltip(font, Lists.newArrayList(tooltip), Optional.empty(), mouseX - gui.getGuiLeft(), mouseY - gui.getGuiTop());
     }
   }
 
@@ -317,60 +406,41 @@ public class NetworkWidget {
       }
     }
     LocalPlayer player = Minecraft.getInstance().player;
-    if (player == null) {
+    if (player == null || !this.canClick()) {
       return;
     }
     ItemStack stackCarriedByMouse = player.containerMenu.getCarried();
     if (!stackUnderMouse.isEmpty()
         && (mouseButton == UtilTileEntity.MOUSE_BTN_LEFT || mouseButton == UtilTileEntity.MOUSE_BTN_RIGHT)
-        && stackCarriedByMouse.isEmpty() &&
-        this.canClick()) {
+        && stackCarriedByMouse.isEmpty()) {
       // Request an item (from the network) if we are in the upper section of the GUI 
       PacketRegistry.INSTANCE.sendToServer(new RequestMessage(mouseButton, this.stackUnderMouse.copy(), Screen.hasShiftDown(),
           Screen.hasAltDown() || Screen.hasControlDown()));
       this.lastClick = System.currentTimeMillis();
     }
-    else if (!stackCarriedByMouse.isEmpty() && inField((int) mouseX, (int) mouseY) &&
-        this.canClick()) {
-          // Insert the item held by the mouse into the network
-          PacketRegistry.INSTANCE.sendToServer(new InsertMessage(0, mouseButton));
-          this.lastClick = System.currentTimeMillis();
-        }
+    else if (!stackCarriedByMouse.isEmpty() && inField((int) mouseX, (int) mouseY)) {
+      // Insert the item held by the mouse into the network
+      PacketRegistry.INSTANCE.sendToServer(new InsertMessage(0, mouseButton));
+      this.lastClick = System.currentTimeMillis();
+    }
   }
 
   private boolean inField(int mouseX, int mouseY) {
-    boolean inField = mouseX > (gui.getGuiLeft() + 7) && mouseX < (gui.getGuiLeft() + ScreenNetworkTable.WIDTH - 7)
-        && mouseY > (gui.getGuiTopFixJei() + 7) && mouseY < (gui.getGuiTopFixJei() + getFieldHeight());
-    return inField;
-  }
-
-  public void initButtons() {
-    int y = this.searchBar.getY() - 4;
-    directionBtn = new ButtonRequest(
-        gui.getGuiLeft() + 6, y, "", (p) -> {
-          gui.setDownwards(!gui.getDownwards());
-          gui.syncDataToServer();
-        }, DEFAULT_NARRATION);
-    directionBtn.setHeight(16);
-    sortBtn = new ButtonRequest(gui.getGuiLeft() + 22, y, "", (p) -> {
-      gui.setSort(gui.getSort().next());
-      gui.syncDataToServer();
-    }, DEFAULT_NARRATION);
-    sortBtn.setHeight(16);
-    if (ModList.get().isLoaded("jei")) {
-      jeiBtn = new ButtonRequest(gui.getGuiLeft() + 38, y, "", (p) -> {
-        gui.setJeiSearchSynced(!gui.isJeiSearchSynced());
-        gui.syncDataToServer();
-      }, DEFAULT_NARRATION);
-      jeiBtn.setHeight(16);
+    int fieldHeight = 0;
+    switch (size) {
+      case NORMAL:
+        fieldHeight = 90;
+      break;
+      case LARGE:
+        fieldHeight = 172;
+      break;
+      case EXPANDED:
+        fieldHeight = 390;
+      break;
     }
-    focusBtn = new ButtonRequest(
-        gui.getGuiLeft() + 166, y + 2, "", (p) -> {
-          gui.setAutoFocus(!gui.getAutoFocus());
-          gui.syncDataToServer();
-        }, DEFAULT_NARRATION);
-    focusBtn.setHeight(11);
-    focusBtn.setWidth(6);
+    boolean inField = mouseX > (gui.getGuiLeft() + 7) && mouseX < (gui.getGuiLeft() + this.scrollWidth - 7)
+        && mouseY > (gui.getGuiTop() + 7) && mouseY < (gui.getGuiTop() + fieldHeight);
+    return inField;
   }
 
   public void sortStackWrappers(List<ItemStack> stacksToDisplay) {
@@ -405,6 +475,7 @@ public class NetworkWidget {
         sortBtn.setTextureId(TextureEnum.SORT_NAME);
       break;
     }
+    if (this.clearGridBtn != null) {}
     focusBtn.setTextureId(gui.getAutoFocus() ? TextureEnum.RED : TextureEnum.GREY);
     directionBtn.setTextureId(gui.getDownwards() ? TextureEnum.SORT_DOWN : TextureEnum.SORT_UP);
     if (jeiBtn != null && ModList.get().isLoaded("jei")) {
@@ -412,24 +483,36 @@ public class NetworkWidget {
     }
   }
 
-  public int getFieldHeight() {
-    return fieldHeight;
+  protected static final int W = 256;
+  //i know they could all be in the same png file and i pull out sprites from it, but split images is easier to work with
+  public static final TileableTexture head = new TileableTexture(new ResourceLocation(StorageNetworkMod.MODID, "textures/gui/expandable_head.png"), W, 10);
+  public static final TileableTexture head_right = new TileableTexture(new ResourceLocation(StorageNetworkMod.MODID, "textures/gui/expandable_head_right.png"), W, 10);
+  public static final TileableTexture row = new TileableTexture(new ResourceLocation(StorageNetworkMod.MODID, "textures/gui/expandable_row.png"), W, SsnConsts.SQ);
+  public static final TileableTexture row_right = new TileableTexture(new ResourceLocation(StorageNetworkMod.MODID, "textures/gui/expandable_row_right.png"), W, SsnConsts.SQ);
+  public static final TileableTexture crafting = new TileableTexture(new ResourceLocation(StorageNetworkMod.MODID, "textures/gui/expandable_crafting.png"), W, 66);
+  public static final TileableTexture crafting_right = new TileableTexture(new ResourceLocation(StorageNetworkMod.MODID, "textures/gui/expandable_crafting_right.png"), W, 66);
+  public static final TileableTexture player = new TileableTexture(new ResourceLocation(StorageNetworkMod.MODID, "textures/gui/expandable_player.png"), 176, 84);
+
+  protected void blitSegment(GuiGraphics ms, TileableTexture tt, int xpos, int ypos) {
+    ms.blit(tt.texture(), xpos, ypos, 0, 0, tt.width(), tt.height());
   }
 
-  public void setFieldHeight(int fieldHeight) {
-    this.fieldHeight = fieldHeight;
-  }
-
-  public interface ISearchHandler {
-
-    public abstract void setSearch(String set);
-
-    public abstract String getSearch();
-
-    public abstract String getName();
-  }
-
-  public enum NetworkScreenSize {
-    NORMAL, LARGE;
+  public void renderBgExpanded(GuiGraphics ms, float partialTicks, int mouseX, int mouseY, int xCenter, int yCenter) {
+    //render the top
+    int xpos = xCenter;
+    int ypos = yCenter;
+    blitSegment(ms, head, xpos, ypos);
+    blitSegment(ms, head_right, xpos + W, ypos);
+    ypos += head.height();
+    //render the rows
+    for (int line = 0; line < this.getLines(); line++) {
+      blitSegment(ms, row, xpos, ypos);
+      blitSegment(ms, row_right, xpos + W, ypos);
+      ypos += row.height();
+    }
+    blitSegment(ms, crafting, xpos, ypos);
+    blitSegment(ms, crafting_right, xpos + W, ypos);
+    ypos += crafting.height() - 4;
+    blitSegment(ms, player, xpos, ypos);
   }
 }
